2013-04-17  Gankov Andrey  <gav@qsolution.ru>

	* IncomeSlip.cs:
	* SeparationPayment.cs:
	* bazar.IncomeSlip.cs: 

2013-04-17  Gankov Andrey  <gav@qsolution.ru>

	* BazAr.csproj:
	* MainWindow.cs:
	* ReportsExt.cs:
	* gui.stetic:
	* MainWindow.cs:
	* DailyCashReport.cs:
	* bazar.DailyCashReport.cs: 

2013-04-14  Gankov Andrey  <gav@qsolution.ru>

	* IncomeSlip.cs:
	* MainWindow.cs:
	* PayAccrual.cs:
	* gui.stetic:
	* MainWindow.cs:
	* bazar.IncomeSlip.cs:
	* bazar.LesseeDebtsReport.cs: 

2013-04-14  Gankov Andrey  <gav@qsolution.ru>

	* BazAr.csproj:
	* MainWindow.cs:
	* gui.stetic:
	* LesseeDebtsReport.cs:
	* bazar.LesseeDebtsReport.cs: 

2013-04-14  Gankov Andrey  <gav@qsolution.ru>

	* CashBalance.cs:
	* gui.stetic: 

2013-04-14  Gankov Andrey  <gav@qsolution.ru>

	* Accrual.cs:
	* BazAr.csproj:
	* IncomeSlip.cs:
	* gui.stetic:
	* SelectAccrualRow.cs:
	* SeparationPayment.cs:
	* generated.cs:
	* bazar.IncomeSlip.cs:
	* bazar.SelectAccrualRow.cs:
	* bazar.SeparationPayment.cs: 

2013-04-11  Gankov Andrey  <gav@qsolution.ru>

	* Accrual.cs:
	* PayAccrual.cs:
	* gui.stetic:
	* bazar.Accrual.cs: 

	* Main.cs: Реализовал более универсальный метод поиска.

2013-04-09  Gankov Andrey  <gav@qsolution.ru>

	* Main.cs:
	* IncomeSlip.cs: 

2013-04-08  Gankov Andrey  <gav@qsolution.ru>

	* Login.cs: 

2013-04-08  Gankov Andrey  <gav@qsolution.ru>

	* Accrual.cs:
	* gui.stetic:
	* bazar.Accrual.cs: 

2013-04-08  Gankov Andrey  <gav@qsolution.ru>

	* MainWindow.cs:
	* gui.stetic:
	* MainWindow.cs: 

2013-04-08  Gankov Andrey  <gav@qsolution.ru>

	* MainWinCash.cs:
	* gui.stetic:
	* MainWindow.cs: 

2013-04-08  Gankov Andrey  <gav@qsolution.ru>

	* BazAr.csproj:
	* MainWindow.cs:
	* DocRegister.cs:
	* gui.stetic:
	* MainWindow.cs:
	* bazar.DocRegister.cs: 

2013-04-02  Gankov Andrey  <gav@qsolution.ru>

	* MainWindow.cs:
	* gui.stetic:
	* MainWindow.cs: 

2013-04-01  Gankov Andrey  <gav@qsolution.ru>

	* changes.txt:
	* BazAr.csproj:
	* MainWindow.cs: 
